# Object-Oriented-Programming

projekt/: CMakeLists.txt  main.cpp
projekt/include/: ClientInDatabaseException.h  FileDoNotExistException.h  NegativeNumberOfClientsException.h  NegativeNumberOfWorkersException.h  NegativeServiceTime.h  NegativeTimeSimulationException.h  NoAvailableOfferException.h  NoAvailableWorkerException.h  NoSuchClientInDatabaseException.h  NoSuchOfferException.h  NoSuchWorkerException.h  OfferAlreadyExistsException.h  WorkerAlreadyExistsException.h  WrongNumberOfArgumentsException.h  account.h  allClients.h  allOffers.h  allWorkers.h  businessClient.h  client.h  closingAccount.h  counter.h  deposit.h  file.h  listService.h  loan.h  machine.h  negative_account_balance.h  offer.h  payment.h  privateClient.h  randomClients.h  randomData.h  randomWorkers.h  service.h  simulation.h  transfer.h  worker.h
projekt/src/: ClientInDatabaseException.cpp  FileDoNotExistException.cpp  NegativeNumberOfClientsException.cpp  NegativeNumberOfWorkersException.cpp  NegativeServiceTime.cpp  NegativeTimeSimulationException.cpp  NoAvailableOfferException.cpp  NoAvailableWorkerException.cpp  NoSuchClientInDatabaseException.cpp  NoSuchOfferException.cpp  NoSuchWorkerException.cpp  OfferAlreadyExistsException.cpp  WorkerAlreadyExistsException.cpp  WrongNumberOfArgumentsException.cpp  account.cpp  allClients.cpp  allOffers.cpp  allWorkers.cpp  businessClient.cpp  client.cpp  closingAccount.cpp  counter.cpp  deposit.cpp  file.cpp  listService.cpp  loan.cpp  machine.cpp  negative_account_balance.cpp  offer.cpp  payment.cpp  privateClient.cpp  randomClients.cpp  randomData.cpp  randomWorkers.cpp  service.cpp  simulation.cpp  transfer.cpp  worker.cpp
projekt/test/: CMakeLists.txt  account_test.cpp  clients_tests.cpp  simulation_test.cpp
zadanie_1/: README.md  date.h  main.cpp
zadanie_2/: date.cpp  main.cpp  playlist.cpp  playlist.h
zadanie_2/test/: catch_config.cpp  playlist_tests.cpp
zadanie_3/: CMakeLists.txt  main.cpp  products.txt
zadanie_3/include/: component.h  date.h  file.h  producer.h  product.h
zadanie_3/src/: component.cpp  date.cpp  file.cpp  producer.cpp  product.cpp
zadanie_3/test/: CMakeLists.txt  product_tests.cpp
zadanie_4/: CMakeLists.txt  main.cpp
zadanie_4/include/: ClientInDatabaseException.h  NoAvailableOfferException.h  NoAvailableWorkerException.h  NoSuchClientInDatabaseException.h  NoSuchOfferException.h  NoSuchWorkerException.h  OfferAlreadyExistsException.h  WorkerAlreadyExistsException.h  allClients.h  allWorkers.h  businessClient.h  client.h  offer.h  privateClient.h  worker.h
zadanie_4/src/: ClientInDatabaseException.cpp  NoAvailableOfferException.cpp  NoAvailableWorkerException.cpp  (+12 more)
(+1 files in other folders)
